--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An ExtraTorrent wrapper for NodeJS.",
   "dependencies": {
     "cheerio": "^0.22.0",
+    "crypto-js": "^3.1.9-1",
     "request": "^2.74.0"
   },
   "devDependencies": {
