--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cheerio": "^0.22.0",
     "cloudscraper": "^1.4.1",
+    "crypto-js": "^3.1.9-1",
     "request": "^2.79.0"
   },
   "devDependencies": {
