--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "cheerio": "^0.22.0",
     "cloudscraper": "^1.4.1",
     "crypto-js": "^3.1.9-1",
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "canvas": "^1.6.4",
+    "deasync": "^0.1.9",
+    "atob": "^2.0.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
