--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,22 @@ node_js:
   - 6
   - 7
 
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - libcairo2-dev
+      - libjpeg8-dev
+      - libpango1.0-dev
+      - libgif-dev
+      - g++-4.9
+env:
+  - CXX=g++-4.9
+
+before_install:
+  - npm explore npm -g -- npm install node-gyp@latest
+
 cache:
   directories:
     - node_modules
