--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ addons:
       - libjpeg8-dev
       - libpango1.0-dev
       - libgif-dev
+      - build-essential
       - g++-4.9
+
 env:
   - CXX=g++-4.9
 
